lab1-eks/k8s/model-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: llm-route
  namespace: yuriip-ai-reliability-engineering-2
spec:
  parentRefs:
    - name: agentgateway-proxy
      namespace: yuriip-ai-reliability-engineering-2
  rules:
    - backendRefs:
        - name: openai
          namespace: yuriip-ai-reliability-engineering-2
          group: agentgateway.dev
          kind: AgentgatewayBackend
